using Parcs.Net;

namespace Parcs.Modules.Sample.Models
{
    public class ModuleOptions : IModuleOptions
    {
        public int PointsNumber { get; set; }
    }
}